--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,7 @@
+name = "ROSStanPluto"
+authors = ["Rob J Goedman"]
+[compat]
+julia = "1.7.1"
+DrWatson = "2.7.6"
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
