--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,28 @@
 name = "ROSStanPluto"
 authors = ["Rob J Goedman"]
-[compat]
-julia = "1.7.1"
-DrWatson = "2.7.6"
+
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+StanSample = "c1514b29-d3a0-5178-b312-660c88baa699"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
+
+[compat]
+CSV = "0.9"
+DataFrames = "1.2"
+Distributions = "0.25"
+DrWatson = "2.7.6"
+GLM = "1.5"
+Plots = "1.23"
+StanSample = "5.1"
+StatsPlots = "0.14"
+julia = "1.7.1"
+
