--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
-CSV = "0.9"
+CSV = "0.9, 0.10"
 DataFrames = "1.2"
 Distributions = "0.25"
 DrWatson = "2.7.6"
