--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 videos
 #plots
 #notebooks
-_research
+#research
 
 ################################################################################
 #                                    Julia                                     #
