--- a/Project.toml
+++ b/Project.toml
@@ -4,25 +4,35 @@ authors = ["Rob J Goedman"]
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 StanSample = "c1514b29-d3a0-5178-b312-660c88baa699"
+StatisticalRethinking = "2d09df54-9d0f-5258-8220-54c2a3d4fbee"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
 CSV = "0.9, 0.10"
 DataFrames = "1.2"
+DataFramesMeta = "0.10"
 Distributions = "0.25"
-DrWatson = "2.7.6"
-GLM = "1.5"
-Plots = "1.23"
-StanSample = "5.1"
+DrWatson = "2.9"
+GLM = "1.6"
+LaTeXStrings = "1.3"
+StableRNGs = "1.0"
+StanSample = "5.6"
+StatsBase = "0.33"
 StatsPlots = "0.14"
+Tables = "1.6"
 julia = "1.7.1"
-
