--- a/Project.toml
+++ b/Project.toml
@@ -22,26 +22,27 @@ MonteCarloMeasurements = "0987c9cc-fe09-11e8-30f0-b96dd679fdca"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 ParetoSmooth = "a68b5a21-f429-434e-8bfa-46b447300aac"
+PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
 RData = "df47a6cb-8c03-5eed-afd8-b6050d6c41da"
-#RegressionAndOtherStories = "21324389-b050-441a-ba7b-9a837781bda0"
+RegressionAndOtherStories = "21324389-b050-441a-ba7b-9a837781bda0"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 StanSample = "c1514b29-d3a0-5178-b312-660c88baa699"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
-Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
 CSV = "0.10"
+CategoricalArrays = "0.10.5"
 DataFrames = "1.3"
 DataFramesMeta = "0.10"
 Distributions = "0.25"
 DrWatson = "2.9"
 GLM = "1.6"
+GLMakie = "0.5"
 LaTeXStrings = "1.3"
-#RegressionAndOtherStories = "0"
 StableRNGs = "1.0"
 StanSample = "6"
 StatsBase = "0.33"
