--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 ################################################################################
 
 # Folders to ignore - files may be too large, too many, etc. NOTE: EDIT IF NEEDED.
-#data
+data
 videos
-#plots
+plots
+papers
 #notebooks
 #research
 
