--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
-GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
+#GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
@@ -37,11 +37,11 @@ Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 CSV = "0.10"
 CategoricalArrays = "0.10.5"
 DataFrames = "1.3"
-DataFramesMeta = "0.10"
+DataFramesMeta = "0.10, 0.11"
 Distributions = "0.25"
 DrWatson = "2.9"
-GLM = "1.6"
-GLMakie = "0.5"
+#GLM = "1.7"
+GLMakie = "0.5, 0.6"
 LaTeXStrings = "1.3"
 StableRNGs = "1.0"
 StanSample = "6"
