--- a/Project.toml
+++ b/Project.toml
@@ -11,17 +11,14 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
-#GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
+GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
-LIBSVM = "b1bec4e5-fd48-53fe-b0cb-9723c09d164b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
-MonteCarloMeasurements = "0987c9cc-fe09-11e8-30f0-b96dd679fdca"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
-ParetoSmooth = "a68b5a21-f429-434e-8bfa-46b447300aac"
 PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
 RData = "df47a6cb-8c03-5eed-afd8-b6050d6c41da"
 RegressionAndOtherStories = "21324389-b050-441a-ba7b-9a837781bda0"
@@ -34,17 +31,27 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
-CSV = "0.10"
-CategoricalArrays = "0.10.5"
-DataFrames = "1.3"
-DataFramesMeta = "0.10, 0.11"
+AlgebraOfGraphics = "0.6.8"
+CSV = "0.10.4"
+CategoricalArrays = "0.10.6"
+DataFrames = "1.3.4"
+DataFramesMeta = "0.11"
 Distributions = "0.25"
 DrWatson = "2.9"
-#GLM = "1.7"
-GLMakie = "0.5, 0.6"
+GLM = "1.8"
+GLMakie = "0.6.8"
+GraphMakie = "0.3.6"
+Graphs = "1.7.1"
 LaTeXStrings = "1.3"
+Makie = "0.17.8"
+NamedTupleTools = "0.14.0"
+Parameters = "0.12.3"
+PooledArrays = "1.4.2"
+RData = "0.8.3"
+RegressionAndOtherStories = "0.4.5"
 StableRNGs = "1.0"
-StanSample = "6"
-StatsBase = "0.33"
-Tables = "1.6"
+StanSample = "6.8.1"
+StatsBase = "0.33.17"
+StatsModels = "0.6"
+Tables = "1.7"
 julia = "1.7.1"
