--- a/Project.toml
+++ b/Project.toml
@@ -48,7 +48,7 @@ NamedTupleTools = "0.14.0"
 Parameters = "0.12.3"
 PooledArrays = "1.4.2"
 RData = "0.8.3"
-RegressionAndOtherStories = "0.4.5, 0.5"
+RegressionAndOtherStories = "0.5.1"
 StableRNGs = "1.0"
 StanSample = "6.8.1"
 StatsBase = "0.33.17"
