--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
 RData = "df47a6cb-8c03-5eed-afd8-b6050d6c41da"
@@ -29,29 +30,3 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
-
-[compat]
-AlgebraOfGraphics = "0.6.8"
-CSV = "0.10.4"
-CategoricalArrays = "0.10.6"
-DataFrames = "1.3.4"
-DataFramesMeta = "0.11"
-Distributions = "0.25"
-DrWatson = "2.9"
-GLM = "1.8"
-GLMakie = "0.6.8"
-GraphMakie = "0.3.6"
-Graphs = "1.7.1"
-LaTeXStrings = "1.3"
-Makie = "0.17.8"
-NamedTupleTools = "0.14.0"
-Parameters = "0.12.3"
-PooledArrays = "1.4.2"
-RData = "0.8.3"
-RegressionAndOtherStories = "0.5.1"
-StableRNGs = "1.0"
-StanSample = "6.8.1"
-StatsBase = "0.33.17"
-StatsModels = "0.6"
-Tables = "1.7"
-julia = "1.7.1"
