--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ deps/src/
 docs/build/
 docs/site/
 
+Manifest.toml
+
 ################################################################################
 #                               Jupyter Notebook                               #
 ################################################################################
